choose-mirror (1.16) UNRELEASED; urgency=low

  * Split input templates files into separate files for http, ftp, and both,
    modify build process so only the relevant templates get included based on
    the protocol support that is built in to the binary. Allows saving
    hundreds of K by disabling ftp support.

 -- Joey Hess <joeyh@debian.org>  Sun, 31 Jul 2005 14:39:37 -0400

choose-mirror (1.15) unstable; urgency=low

  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Tagalog (tl.po) by Eric Pareja

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Jul 2005 16:48:00 +0300

choose-mirror (1.14) unstable; urgency=low

  * Updated translations:
    - Indonesian (id.po) by Arief S Fitrianto
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Vietnamese (vi.po) added by Clytie Siddall

 -- Christian Perrier <bubulle@debian.org>  Wed,  6 Jul 2005 21:06:34 +0200

choose-mirror (1.13) unstable; urgency=low

  * Joey Hess
    - Turn on -Os and -fomit-frame-pointer, doesn't save much space tho.
    - Switch PREFERRED_DISTRIBUTION to etch.
  * Updated translations: 
    - Greek, Modern (1453-) (el.po) by Greek Translation Team

 -- Joey Hess <joeyh@debian.org>  Tue, 28 Jun 2005 21:28:30 -0400

choose-mirror (1.12) unstable; urgency=low

  * Colin Watson
    - Switch to using iso_3166.xml rather than the deprecated iso_3166.tab,
      by the crude method of copying iso3166tab.py from the iso-codes source
      to convert it to the old .tab format for us on the fly.
    - Build-depend on the first version of iso-codes that shipped
      /usr/share/xml/iso-codes/iso_3166.xml.
    - Allow an alternate location for Mirrors.masterlist to be given on the
      mirrorlist command line, and add Makefile support for this.
    - 'make reallyclean' now depends on 'make clean'.
    - Start counting site ids at 0 in mirrorlist.
    - Support wildcard-DNS-style entries in Mirrors.masterlist, that get