@@ -1,2 +1,8 @@
 #!/bin/sh -e
+
+if [ -f /etc/lsb-release ]; then
+	. /etc/lsb-release
+	export PREFERRED_DISTRIBUTION="$DISTRIB_RELEASE"
+fi
+
 exec choose-mirror
