@@ -1,9 +1,14 @@
 choose-mirror (1.16) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Split input templates files into separate files for http, ftp, and both,
     modify build process so only the relevant templates get included based on
     the protocol support that is built in to the binary. Allows saving
     hundreds of K by disabling ftp support.
+
+  [ Colin Watson ]
+  * Read DISTRIB_RELEASE from /etc/lsb-release if it's present, and use that
+    to override the hardcoded PREFERRED_DISTRIBUTION.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 31 Jul 2005 14:39:37 -0400
 
